Fix Canvas being stuck in lo-res mode after cancelling Move or Filter action

Now when the update scheduler sees that a Lod0 stroke has been cancelled,
it notifies the Resume stroke (via its filter) that the GUI should refetch
image data for the Lod0 planes inside tiles.

BUG:447338